<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">


    <CheckBox
        android:id="@+id/omikuji"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/omikuji"/>

    <CheckBox
        android:id="@+id/meshi"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/meshi"/>

    <CheckBox
        android:id="@+id/seiyu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/seiyu"/>

    <CheckBox
        android:id="@+id/precure"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/precure"/>

    <CheckBox
        android:id="@+id/pokemon"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/pokemon"/>

    <CheckBox
        android:id="@+id/lovelive"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/lovelive"/>
    <CheckBox
        android:id="@+id/monhan"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/monhan"/>
    <CheckBox
        android:id="@+id/imas"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/imas"/>
    <CheckBox
        android:id="@+id/aikatsu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/aikatsu"/>
</LinearLayout>