<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:actionbarappcompat="http://schemas.android.com/apk/res-auto"
      tools:context=".MyActivity">
    <item
        android:id="@+id/action_deauthentication"
        android:title="@string/action_deauth"
        android:orderInCategory="100"/>
    <item
        android:id="@+id/action_auth"
        android:title="@string/action_auth"
        android:orderInCategory="100"/>
    <item
        android:id="@+id/post_request"
        android:title="@string/post_request"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_edit"
        actionbarappcompat:showAsAction="ifRoom"/>
    <item
        android:id="@+id/update_request"
        android:title="@string/update_request"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_refresh"
        actionbarappcompat:showAsAction="ifRoom"/>
    <item
        android:id="@+id/open_official_now_page"
        android:title="@string/open_official_now_page"
        android:orderInCategory="100"/>
</menu>
